bluec-tests/tests/invalid/typedef/fn_pointer_return_function_type.c
typedef float MyFun(double);

int main(void) {
    MyFun (*fn)(int);
    return 0;
}